# SantaClausAutomation

./: CMakeLists.txt  README.md  elf.cpp  santa.cpp  tests.cpp
gifts/: box.cpp  box.h  gift_paper.cpp  gift_paper.h  wrap.cpp  wrap.h
objects/: little_pony.cpp  little_pony.h  object.cpp  object.h  teddy.cpp  teddy.h  toy.cpp  toy.h
persons/: elf.cpp  elf.h  i_elf.cpp  i_elf.h  papa_xmas_elf.cpp  papa_xmas_elf.h  santa_claus.cpp  santa_claus.h
test_files/: gift1.xml  gift2.xml  gift3.xml
workplace/: constants.h  conveyor_belt_rand.cpp  conveyor_belt_rand.h  i_conveyor_belt.cpp  i_conveyor_belt.h  i_table.cpp  i_table.h  papa_xmas_conveyor_belt.cpp  papa_xmas_conveyor_belt.h  papa_xmas_table.cpp  papa_xmas_table.h  table_rand.cpp  table_rand.h  warp_machine.cpp  warp_machine.h
xml/: xml_object.cpp  xml_object.h
